Updated cloud talk.

--- a/charla-nube/index.html
+++ b/charla-nube/index.html
@@ -24,7 +24,7 @@
             <h2>¿Qué es la nube?</h2>
             <img class="clean_img" src="images/clouds.svg" />
           </section>
-          <section>
+          <section class='past-days' data-background-color='#F5CB22' data-background='-moz-radial-gradient(center, circle cover, #F5CB22 0%, #1c1e20 100%)'>
             <section>
               <h2>
                 Desarrollo hace 10&nbsp;+&nbsp;rand(10) años
@@ -82,10 +82,12 @@
                   APIs
                   <br>
                   para todo
+                  <br>
+                  (REST...)
                 </td>
               </tr>
               <tr>
-                <td class='fragment unique-row' colspan='3'>
+                <td class='fragment' colspan='3'>
                   ...
                 </td>
               </tr>
@@ -96,13 +98,25 @@
               <li>
                 Cambios sociales y culturales
                 <span class='fragment'>
-                  ... que llevan a cambios técnicos
+                  ... que llevan a cambios técnicos (¡y viceversa!)
                 </span>
+                <ul>
+                  <li class='fragment'>
+                    Un ejemplo es esta «diapositiva»
+                  </li>
+                </ul>
               </li>
               <li class='fragment'>
                 De una aplicación grande a muchas chicas interconectadas
               </li>
               <li class='fragment'>
+                Muchos servicios gestionados por terceros...
+              </li>
+            </ul>
+          </section>
+          <section>
+            <ul>
+              <li>
                 Muchos servicios gestionados por terceros
                 <table class='full-table fragment'>
                   <tr>
@@ -121,10 +135,10 @@
                       BBDD
                     </td>
                     <td>
-                      Backups/seguridad
+                      Backups
                     </td>
                     <td>
-                      Logs/monitorización/análisis
+                      Pagos
                     </td>
                   </tr>
                   <tr>
@@ -140,17 +154,38 @@
                   </tr>
                   <tr>
                     <td>
-                      BBDD
+                      Logs
                     </td>
                     <td>
-                      Backups/seguridad
+                      Monitorización
                     </td>
                     <td>
-                      Pasarelas de pago
+                      Análisis
                     </td>
                   </tr>
-                  <tr>
-                    <td class='unique-row' colspan='3'>
+                  <tr class='fragment'>
+                    <td>
+                      Repositorios,
+                      <br>
+                      editores,
+                      <br>
+                      máquinas de desarrollo...
+                    </td>
+                    <td>
+                      Pruebas
+                      <br>
+                      (Integración Continua...)
+                    </td>
+                    <td>
+                      Facturación,
+                      <br>
+                      control de tiempos,
+                      <br>
+                      gestión de proyectos...
+                    </td>
+                  </tr>
+                  <tr class='fragment'>
+                    <td colspan='3'>
                       ...
                     </td>
                   </tr>
@@ -160,32 +195,77 @@
           </section>
           <section>
             <h3>Cosas a tener en cuenta</h3>
-            <p>
-              dependencia, complejidad, blah, blah
-            </p>
-            <p>
-              mejor diseño, se prueba mejor, coste...
-            </p>
+            <ul>
+              <li>
+                Menor control (dependencia de terceros)
+              </li>
+              <li>
+                Menor libertad
+              </li>
+              <li>
+                Mayor complejidad
+                <span>
+                  (en principio)
+                </span>
+              </li>
+            </ul>
           </section>
-          <section>
-            <h3>Igual algo más...</h3>
+          <section data-transition='none'>
+            <h3>Cosas a tener en cuenta</h3>
+            <ul>
+              <li>
+                Mejor diseño
+              </li>
+              <li>
+                Mejor desarrollo (pruebas, flexibilidad...)
+              </li>
+              <li>
+                Menor coste
+              </li>
+            </ul>
+          </section>
+          <section data-background-color='#71E9F4' data-background='-moz-radial-gradient(center, circle cover, #71E9F4 0%, #1c1e20 100%)'>
+            <h2>Desarrollo en 2024</h2>
+            <h3>¿?</h3>
+            <aside class='fragment'>
+              <img width="70%" class="clean_img" src="images/bttf.png" />
+            </aside>
           </section>
           <section>
             <h4>Cosas aburridas</h4>
-            <ul>
-              <li>
-                <a href="http://commons.wikimedia.org/wiki/File:Cloud_computing_icon.svg">Imagen</a>
-                de la nube de
-                <a href="http://commons.wikimedia.org/wiki/User_talk:%CE%A0rate">Πrate</a>
-              </li>
-              <li>
-                <a href="http://git-scm.com/downloads/logos">Logo de git</a>
-                de
-                <a href="http://twitter.com/jasonlong">Jason Long</a>
-              </li>
-            </ul>
+            <table class='full-table smalltext'>
+              <tr>
+                <td>
+                  <a href="http://commons.wikimedia.org/wiki/File:Cloud_computing_icon.svg">Imagen</a>
+                  de la nube de
+                  <a href="http://commons.wikimedia.org/wiki/User_talk:%CE%A0rate">Πrate</a>
+                  <br>
+                  <a href="http://git-scm.com/downloads/logos">Logo de git</a>
+                  de
+                  <a href="http://twitter.com/jasonlong">Jason Long</a>
+                </td>
+                <td>
+                  Otro material usado pertenece
+                  <br>
+                  a los proyectos o empresas
+                  <br>
+                  correspondientes
+                </td>
+                <td>
+                  Gracias a
+                  <a href="https://github.com/hakimel/reveal.js/">reveal.js</a>,
+                  <br>
+                  <a href="http://middlemanapp.com/">Middleman</a>,
+                  <a href="https://github.com/faye/faye">Faye</a>,
+                  <br>
+                  <a href="https://github.com/groteck">grokeck</a>,
+                  y
+                  <a href="https://github.com/PandaPandastico">Panda</a>
+                </td>
+              </tr>
+            </table>
             <hr>
-            <h3>Preguntas</h3>
+            <h1>Preguntas</h1>
           </section>
         </div>
       </div>
